# lczero-planning

./: .gitmodules  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
assets/: .gitignore  records.txt  resolve-assets.sh  resolve-small-assets.sh
scripts/: constants.py
scripts/datasets/: convert_tcec_dataset.py  make_activations_datasets.py  make_concepts_dataset.py  make_features_dataset.py  make_tcec_dataset.py  make_trajectories_dataset.py  resolve_models.py
scripts/play/: raw_matchmaking.py
scripts/sae_analysis/: raw_analyse_features.ipynb
scripts/sae_training/: run_buffer.py  run_contrastive.py  run_regular.py  sweep_config.yaml  train_buffer.py  train_contrastive.py  train_regular.py
scripts/sae_utils/: buffer_training.py  sae.py  training.py
