[tool.ruff]
line-length = 119
target-version = "py39"

[tool.poetry]
name = "lczero-planning"
version = "0.1.0"
description = "Interpreting planning in LeelaChessZero networks."
readme = "README.md"
license = "MIT"
authors = [
    "Yoann Poupart <yoann.poupart@ens-lyon.org>",
]
package-mode = false

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
datasets = "^2.19.0"
loguru = "^0.7.2"
lczerolens = {git = "https://github.com/Xmaster6y/lczerolens", rev = "4964fb98e22ebe2e835f25e26b83f10e3bc5da2d"}
wandb = "^0.16.6"
pydantic = "^2.7.1"

nnsight = {git = "https://github.com/Xmaster6y/nnsight", rev = "modules"}
[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "*"

[tool.poetry.group.demo]
optional = true

[tool.poetry.group.demo.dependencies]
gradio = "^4.29.0"
